--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,35 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Stepik Delivery</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <style>
-    /* Sticky footer styles
-    -------------------------------------------------- */
-    html {
-      position: relative;
-      min-height: 100%;
-    }
-    body {
-      margin-bottom: 60px; /* Margin bottom by footer height */
-    }
-    .footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 60px; /* Set the fixed height of the footer here */
-      line-height: 60px; /* Vertically center the text there */
-    }
-    .navbar {
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-  </style>
-</head>
-
-<body>
+{% block content %}
   <header class="container mt-3">
     <nav class="py-1 navbar navbar-dark bg-dark">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -215,13 +184,6 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
-    <nav class="container navbar navbar-light bg-light">
-      <ul class="navbar-nav mr-auto">
-        <p class="h4 nav-link">Stepik Delivery</p>
-      </ul>
-      <a class="text-muted" href="#">Project author 2020</a>
-    </nav>
-  </footer>
-</body>
-</html>
+  {% include 'footer.html' %}
+
+{% endblock %}
