--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,28 +8,10 @@
     <title>СBin | Stepik Delivery</title>
     {% endif %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <style>
-    /* Sticky footer styles
-    -------------------------------------------------- */
-    html {
-      position: relative;
-      min-height: 100%;
-    }
-    body {
-      margin-bottom: 60px; /* Margin bottom by footer height */
-    }
-    .footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 60px; /* Set the fixed height of the footer here */
-      line-height: 60px; /* Vertically center the text there */
-    }
-    .navbar {
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-  </style>
+
+    {% block style %}
+    {% endblock %}
+
 </head>
 
 <body>
