--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -1,5 +1,29 @@
+{% extends 'base.html' %}
+{% block style %}
+<style>
+    /* Sticky footer styles
+    -------------------------------------------------- */
+    html {
+      position: relative;
+      min-height: 100%;
+    }
+    body {
+      margin-bottom: 60px; /* Margin bottom by footer height */
+    }
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 60px; /* Set the fixed height of the footer here */
+      line-height: 60px; /* Vertically center the text there */
+    }
+    .navbar {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  </style>
+{% enblock %}
 {% block content %}
-
   <header class="container mt-3">
     <nav class="py-1 navbar navbar-dark bg-dark">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
