--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 {% block content %}
   <header class="container mt-3">
     <nav class="py-1 navbar navbar-dark bg-dark">
