first part of main page is ready

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-
 {% block content %}
   <header class="container mt-3">
     <nav class="py-1 navbar navbar-dark bg-dark">
@@ -23,167 +22,24 @@
     </section>
 
     <section>
-      <h3 class="my-4">Суши</h3>
-      <div class="row mt-4">
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <h4 class="h5 card-title">Ролл Тьюринг</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
+      {% for cat, dish in dishes_d.items() %}
+        <h3 class="my-4">{{ cat }}</h3>
+        <div class="row mt-4">
+              {% for d in dish %}
+                    <div class="col-12 col-md-4">
+                        <div class="card mb-3">
+                          <img src='{{ d.picture }}' width="300" height="200" class="card-img-top" alt="{{ d.title }}">
+                          <div class="card-body">
+                              <h4 class="h5 card-title">{{ d.title }}</h4>
+                              <p class="card-text">{{ d.description }}</p>
+                              <a href="/addtocart/{{ d.d_id }}/" class='btn btn-danger'>В корзину</a>
+                          </div>
+                        </div>
+                     </div>
+               {% endfor %}
         </div>
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <h4 class="h5 card-title">Ролл "Хомский"</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <h4 class="h5 card-title">Острый ролл "Ада"</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+        {% endfor %}
 
-    <section>
-      <h3 class="my-4">Стритфуд</h3>
-      <div class="row mt-4">
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <h4 class="h5 card-title">Гриль 500</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <h4 class="h5 card-title">Бургер 404</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top">
-            <div class="card-body">
-              <h4 class="h5 card-title">Ролл 301</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h3 class="my-4">Пицца</h3>
-      <div class="row mt-4">
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Пицца "Армин"</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Пицца "Гвидо"</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Пицца "Марк и Якоб"</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section>
-      <h3 class="my-4">Новинки</h3>
-      <div class="row mt-4">
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <div class="row ">
-                <h5 class="col-6 card-title">Card title</h5>
-                <h5 class="col-6 card-title text-right">360 Р</h5>
-              </div>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                the card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <div class="row ">
-                <h5 class="col-6 card-title">Card title</h5>
-                <h5 class="col-6 card-title text-right">420 Р</h5>
-              </div>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                the card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card mb-3">
-            <img src=https://place-hold.it/300x200 width="300" height="200" class="card-img-top" alt="">
-            <div class="card-body">
-              <div class="row ">
-                <h5 class="col-6 card-title">Card title</h5>
-                <h5 class="col-6 card-title text-right">310 Р</h5>
-              </div>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                the card's content.</p>
-              <a href="/addtocart1/" btn btn-danger">В корзину</a>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
   </main>
   {% include 'footer.html' %}
