pymorphy2 integrated into session['cart']

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -22,7 +22,7 @@
       padding-bottom: 0;
     }
   </style>
-{% enblock %}
+{% endblock %}
 {% block content %}
   {% include 'nav.html' %}
   <main class="container">
