--- a/templates/cart.html
+++ b/templates/cart.html
@@ -38,73 +38,60 @@
           <form action="/cart/" method="POST">
           <h4 class="">Ваши данные</h4>
           <div class=" md-4 order-md-1">
+              {% for field in form.errors %}
+                  {% for error in form.errors[field] %}
+                  <div style="color:red;">
+                      {{error}}
+                  </div>
+                  {% endfor %}
+              {% endfor %}
+
             <div class="mt-3 mb-3">
-              <label for="name">Ваше имя</label>
-              <input type="text" class="font-weight-bold form-control" id="name">
+              {{ form.username.label }}
+              {{ form.username(class="font-weight-bold form-control") }}
             </div>
           </div>
-          <div class=" md-4 order-md-1">
-            <div class="mt-3 mb-3">
-              <label for="name">Адрес</label>
-              <input type="text" class="font-weight-bold form-control" id="name">
+            <div class=" md-4 order-md-1">
+              <div class="mt-3 mb-3">
+                {{ form.address.label }}
+                {{ form.address(class="font-weight-bold form-control") }}
+              </div>
             </div>
-          </div>
-          <div class="md-4 form-label-group">
-            <label for="name">Электропочта</label>
-            <input type="email" id="inputEmail" class="form-control" required autofocus>
-            <label for="inputEmail"></label>
-          </div>
-          <div class=" md-4 order-md-1">
-            <div class="mt-3 mb-3">
-              <label for="name">Телефон</label>
-              <input type="text" class="font-weight-bold form-control" id="name">
+            <div class="md-4 form-label-group">
+              {{ form.email.label }}
+              {{ form.email(autofocus=true, class="form-control") }}
             </div>
-
-           <input type="hidden" value = "875" name="order_summ">
-           <input type="hidden" value="[1,3,4]" name="order_cart">
-
-
+            <div class=" md-3 order-md-1">
+              <div class="mt-3 mb-3">
+                {{ form.telephone.label }}
+                {{ form.telephone(class="font-weight-bold form-control") }}
+              </div>
           </form>
         </div>
-
-
-
           <button type="submit" class=" mt-3 mb-5 btn btn-danger">Оформить заказ</button>
 
         </div>
 
-
-
       <div class="col-1"></div>
       <div class="col-7">
-        <h4 class="mb-3 col-7 mb-5">3 блюда в корзине</h4>
-        <table class="table">
-          <tbody>
-            <tr>
-              <th scope="row">Ролл "Хомский"</th>
-              <td></td>
-              <td>1</td>
-              <td>315</td>
-              <td><a class="text-danger" href="#">Удалить</a></td>
-            </tr>
-            <tr>
-              <th scope="row">Бургер 404</th>
-              <td></td>
-              <td>1</td>
-              <td>250</td>
-              <td><a class="text-danger" href="#">Удалить</a></td>
-            </tr>
-            <tr>
-              <th scope="row">Пица "Армин"</th>
-              <td></td>
-              <td>1</td>
-              <td>310</td>
-              <td><a class="text-danger" href="#">Удалить</a></td>
-            </tr>
-          </tbody>
-        </table>
+        <h4 class="mb-3 col-7 mb-5">{{ cart_info[0] }} в корзине:</h4>
+        {% if dishes|length > 0 %}
+            <table class="table">
+              <tbody>
+                {% for dish in dishes %}
+                <tr>
+                  <th scope="row">{{ dish.title }}</th>
+                  <td></td>
+                  <td>1</td>
+                  <td>{{ dish.price }}</td>
+                  <td><a class="text-danger" href="/delfromcart/{{ dish.d_id }}/">Удалить</a></td>
+                </tr>
+                {% endfor %}
+              </tbody>
+              </table>
+        {% endif %}
         <hr>
-        <p class="display-4 my-2 ">875 руб</p>
+        <p class="display-4 my-2 ">Итого: {{ cart_info[1] }} руб</p>
       </div>
     </div>
   </main>
