--- a/templates/cart.html
+++ b/templates/cart.html
@@ -36,36 +36,35 @@
 
         <div class="col-4">
           <form action="/cart/" method="POST">
-          <h4 class="">Ваши данные</h4>
-          <div class=" md-4 order-md-1">
-              {% for field in form.errors %}
-                  {% for error in form.errors[field] %}
-                  <div style="color:red;">
-                      {{error}}
-                  </div>
+              <h4>Ваши данные</h4>
+              <div class=" md-4 order-md-1">
+                  {% for field in form.errors %}
+                      {% for error in form.errors[field] %}
+                      <div style="color:red;">
+                          {{error}}
+                      </div>
+                      {% endfor %}
                   {% endfor %}
-              {% endfor %}
-
-            <div class="mt-3 mb-3">
-              {{ form.username.label }}
-              {{ form.username(class="font-weight-bold form-control") }}
-            </div>
-          </div>
-            <div class=" md-4 order-md-1">
-              <div class="mt-3 mb-3">
-                {{ form.address.label }}
-                {{ form.address(class="font-weight-bold form-control") }}
+                <div class="mt-3 mb-3">
+                  {{ form.username.label }}
+                  {{ form.username(class="font-weight-bold form-control") }}
+                </div>
               </div>
-            </div>
-            <div class="md-4 form-label-group">
-              {{ form.email.label }}
-              {{ form.email(autofocus=true, class="form-control") }}
-            </div>
-            <div class=" md-3 order-md-1">
-              <div class="mt-3 mb-3">
-                {{ form.telephone.label }}
-                {{ form.telephone(class="font-weight-bold form-control") }}
-              </div>
+                <div class=" md-4 order-md-1">
+                  <div class="mt-3 mb-3">
+                    {{ form.address.label }}
+                    {{ form.address(class="font-weight-bold form-control") }}
+                  </div>
+                </div>
+                <div class="md-4 form-label-group">
+                  {{ form.email.label }}
+                  {{ form.email(autofocus=true, class="form-control") }}
+                </div>
+                <div class=" md-3 order-md-1">
+                  <div class="mt-3 mb-3">
+                    {{ form.telephone.label }}
+                    {{ form.telephone(class="font-weight-bold form-control") }}
+                  </div>
           </form>
         </div>
           <button type="submit" class=" mt-3 mb-5 btn btn-danger">Оформить заказ</button>
@@ -74,21 +73,23 @@
 
       <div class="col-1"></div>
       <div class="col-7">
-        <h4 class="mb-3 col-7 mb-5">{{ cart_info[0] }} в корзине:</h4>
         {% if dishes|length > 0 %}
+        <h4 class="mb-3 col-7 mb-5">{{ cart_info[0] }} в корзине:</h4>
             <table class="table">
               <tbody>
                 {% for dish in dishes %}
-                <tr>
-                  <th scope="row">{{ dish.title }}</th>
-                  <td></td>
-                  <td>1</td>
-                  <td>{{ dish.price }}</td>
-                  <td><a class="text-danger" href="/delfromcart/{{ dish.d_id }}/">Удалить</a></td>
-                </tr>
+                    <tr>
+                      <th scope="row">{{ dish.title }}</th>
+                      <td></td>
+                      <td>1</td>
+                      <td>{{ dish.price }}</td>
+                      <td><a class="text-danger" href="/delfromcart/{{ dish.d_id }}/">Удалить</a></td>
+                    </tr>
                 {% endfor %}
               </tbody>
               </table>
+        {% else %}
+        <h2>Ваша корзина пуста </h2>
         {% endif %}
         <hr>
         <p class="display-4 my-2 ">Итого: {{ cart_info[1] }} руб</p>
