--- a/templates/cart.html
+++ b/templates/cart.html
@@ -45,6 +45,7 @@
                       </div>
                       {% endfor %}
                   {% endfor %}
+                {{ form.csrf_token }}
                 <div class="mt-3 mb-3">
                   {{ form.username.label }}
                   {{ form.username(class="font-weight-bold form-control") }}
@@ -65,9 +66,10 @@
                     {{ form.telephone.label }}
                     {{ form.telephone(class="font-weight-bold form-control") }}
                   </div>
+          <button type="submit" class="mt-3 mb-5 btn btn-danger">Оформить заказ</button>
           </form>
         </div>
-          <button type="submit" class=" mt-3 mb-5 btn btn-danger">Оформить заказ</button>
+
 
         </div>
 
