--- a/templates/register.html
+++ b/templates/register.html
@@ -52,6 +52,10 @@
                   {{ form.password.label(class="text-muted") }}
                   {{ form.password(class="form-control") }}
             </div>
+              <div class="mt-2 form-label-group">
+                  {{ form.password_equal.label(class="text-muted") }}
+                  {{ form.password_equal(class="form-control") }}
+            </div>
           </div>
           <div class="checkbox mb-3"></div>
           <button class="btn btn-lg btn-danger btn-block" type="submit">Зарегистрироваться</button>
