--- a/templates/cart.html
+++ b/templates/cart.html
@@ -27,16 +27,17 @@
   {% include 'nav.html' %}
   <main class="container">
     <h1 class="h3 my-4">Корзина</h1>
-
+    {% if session.cart_del %}
     <div class="alert alert-warning" role="alert">Блюдо удалено из корзины</div>
+      {% endif %}
     {% if not session.user %}
     <div class="alert alert-warning" role="alert">Чтобы сделать заказ – <a href="/login/">войдите</a> или <a href="/registration/">зарегистрируйтесь</a></div>
-    {% endif %}
+    {% else %}
     <div class="row mt-5">
 
 
         <div class="col-4">
-          <form action="/ordered/" method="POST">
+          <form action="/cart/" method="POST">
               <h4>Ваши данные</h4>
               <div class=" md-4 order-md-1">
                   {% for field in form.errors %}
@@ -49,7 +50,7 @@
                 {{ form.csrf_token }}
                 <div class="mt-3 mb-3">
                   {{ form.username.label }}
-                  {{ form.username(class="font-weight-bold form-control") }}
+                  {{ form.username(autofocus=true, class="font-weight-bold form-control") }}
                 </div>
               </div>
                 <div class=" md-4 order-md-1">
@@ -58,17 +59,12 @@
                     {{ form.address(class="font-weight-bold form-control") }}
                   </div>
                 </div>
-                {% if not session.user %}
-                <div class="md-4 form-label-group">
-                  {{ form.email.label }}
-                  {{ form.email(autofocus=true, class="form-control") }}
-                </div>
-                {% endif %}
                 <div class=" md-3 order-md-1">
                   <div class="mt-3 mb-3">
                     {{ form.telephone.label }}
                     {{ form.telephone(class="font-weight-bold form-control") }}
                   </div>
+                    {{ form.email(class="form-control") }}
                     {{ form.price(class="form-control") }}
           <button type="submit" class="mt-3 mb-5 btn btn-danger">Оформить заказ</button>
           </form>
@@ -101,6 +97,7 @@
         <p class="display-4 my-2 ">Итого: {{ cart_info[1] }} руб</p>
       </div>
     </div>
+           {% endif %}
   </main>
   {% include 'footer.html' %}
 
