--- a/templates/ordered.html
+++ b/templates/ordered.html
@@ -1,5 +1,30 @@
 {% extends 'base.html' %}
+{% block style %}
+<style>
+    /* Sticky footer styles
+    -------------------------------------------------- */
+    html {
+      position: relative;
+      min-height: 100%;
+    }
+    body {
+      margin-bottom: 60px; /* Margin bottom by footer height */
+    }
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 60px; /* Set the fixed height of the footer here */
+      line-height: 60px; /* Vertically center the text there */
+    }
+    .navbar {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  </style>
+{% endblock %}
 {% block content %}
+  {% include 'nav.html' %}
   <main class="container">
     <div class="row">
       <div class="col-8 col-lg-4 offset-2 offset-lg-4">
@@ -17,5 +42,7 @@
       </div>
     </div>
   </main>
+
+  {% include 'footer.html' %}
 
 {% endblock %}
