--- a/templates/cart.html
+++ b/templates/cart.html
@@ -32,7 +32,7 @@
       {% endif %}
     {% if not session.user %}
     <div class="alert alert-warning" role="alert">Чтобы сделать заказ – <a href="/login/">войдите</a> или <a href="/registration/">зарегистрируйтесь</a></div>
-    {% else %}
+    {% endif %}
     <div class="row mt-5">
 
 
@@ -60,13 +60,18 @@
                   </div>
                 </div>
                 <div class=" md-3 order-md-1">
+                    <div class="mt-3 mb-3">
+                    {{ form.email.label }}
+                    {{ form.email(class="font-weight-bold form-control") }}
+                  </div>
                   <div class="mt-3 mb-3">
                     {{ form.telephone.label }}
                     {{ form.telephone(class="font-weight-bold form-control") }}
                   </div>
-                    {{ form.email(class="form-control") }}
                     {{ form.price(class="form-control") }}
-          <button type="submit" class="mt-3 mb-5 btn btn-danger">Оформить заказ</button>
+                    {% if session.user %}
+                        <button type="submit" class="mt-3 mb-5 btn btn-danger">Оформить заказ</button>
+                    {% endif %}
           </form>
         </div>
 
@@ -92,7 +97,7 @@
               </table>
         {% else %}
         <h2>Ваша корзина пуста </h2>
-        {% endif %}
+
         <hr>
         <p class="display-4 my-2 ">Итого: {{ cart_info[1] }} руб</p>
       </div>
